...
                ListItemView(task: task, isLast: isLast)
                    // Определение области кликабельности
                    .contentShape(Rectangle())
                    .contextMenu {
                        Button(action: { onEdit(task) }) {
                            // Кнопка редактирования
                            Label("Редактировать", systemImage: "square.and.pencil")
                        }
                        Button(action: { onShare(task) }) {
                            // Кнопка поделиться
                            Label("Поделиться", systemImage: "square.and.arrow.up")
                        }
                        Button(role: .destructive, action: { onDelete(task) }) {
...
        .navigationDestination(isPresented: $isNavigatingToTaskDetail){
            presenter.router.navigateToTaskDetails(with: selectedTask)
        }
        // Максимальная ширина
        .frame(maxWidth: .infinity)
        // Заголовок страницы
        .navigationTitle("Задачи")
        // Загрузка данных при появлении экрана
        .onAppear {
            presenter.loadData()
        }
    }
    
...
