...
        VStack(alignment: .leading, spacing: 10) {
            // Текстовое поле для ввода названия задачи
            TextField("Введите название", text:$presenter.task.title,  axis: .vertical)
                .font(.title)
                .fontWeight(.bold)
                .contentShape(Rectangle())
                .accessibilityIdentifier("text.field")
            // Отображение даты создания задачи
            Text("\(task.dateCreatedFormatted)")
                .font(.caption)
                .foregroundColor(.secondary)
            // Текстовое поле для ввода описания задачи
            TextField("Введите описание", text:$presenter.task.descriptionData, axis: .vertical)
...
